--- a/src/resources/fxml/feizai.fxml
+++ b/src/resources/fxml/feizai.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.layout.*?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane
+        fx:controller="com.soft1841.sm.controller. " maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Label layoutX="154.0" layoutY="318.0" prefHeight="56.0" prefWidth="99.0" text="管理员：">
          <font>
