--- a/src/resources/fxml/manage.fxml
+++ b/src/resources/fxml/manage.fxml
@@ -12,7 +12,7 @@
        <Image url="/img/dahai.jpg"/>
    </ImageView>
     <children>
-        <Label styleClass="radio-button" layoutX="201.0" layoutY="42.0" prefHeight="143.0" prefWidth="701.0" text="晨光超市欢迎您" textFill="#1a4744d6">
+        <Label styleClass="radio-button" layoutX="201.0" layoutY="42.0" prefHeight="143.0" prefWidth="701.0" text="肥仔超市欢迎您" textFill="#1a4744d6">
             <font>
                 <Font size="80" />
             </font>
