--- a/src/resources/fxml/sample.fxml
+++ b/src/resources/fxml/sample.fxml
@@ -3,6 +3,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<GridPane fx:controller="com.soft1841.sm.Controller.Controller"
+<GridPane fx:controller="com.soft1841.sm.controller.Controller"
           xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
 </GridPane>
