--- a/src/resources/fxml/seller.fxml
+++ b/src/resources/fxml/seller.fxml
@@ -8,10 +8,15 @@
 
 <?import javafx.scene.effect.Reflection?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.soft1841.sm.controller.SellerController">
-    <Label text="收银系统"  fx:id="02"  AnchorPane.topAnchor="100" AnchorPane.leftAnchor="200">
+    <ImageView>
+        <Image url="/img/background.jpg"/>
+    </ImageView>
+    <Label text="收银系统"  fx:id="02"  AnchorPane.topAnchor="70" AnchorPane.leftAnchor="215">
         <effect>
             <Reflection bottomOpacity="0.2" fraction="0.5" topOffset="-5.0"/>
         </effect>
@@ -20,13 +25,13 @@
         </font>
     </Label>
     <Label text="用 户 名" AnchorPane.topAnchor="200" AnchorPane.leftAnchor="80"/>
-    <TextField promptText="admin" fx:id="user" AnchorPane.topAnchor="200" AnchorPane.leftAnchor="170"/>
+    <TextField promptText="admin" fx:id="user" AnchorPane.topAnchor="200" AnchorPane.leftAnchor="200"/>
     <Label text="密     码" AnchorPane.topAnchor="255" AnchorPane.leftAnchor="80"/>
-    <TextField promptText="password" fx:id="password" AnchorPane.topAnchor="250" AnchorPane.leftAnchor="170"/>
-    <Button text="登      录"  onAction="#sellerLogin" AnchorPane.topAnchor="330"
-            AnchorPane.leftAnchor="180" fx:id="01"/>
-    <Label text="忘记密码?" fx:id="03" AnchorPane.topAnchor="380" AnchorPane.leftAnchor="440"/>
-    <Label text="记住密码" fx:id="04" AnchorPane.topAnchor="380" AnchorPane.leftAnchor="205"/>
+    <TextField promptText="password" fx:id="password" AnchorPane.topAnchor="250" AnchorPane.leftAnchor="200"/>
+    <Button text="登      录"  onAction="#sellerLogin" AnchorPane.topAnchor="330 "
+            AnchorPane.leftAnchor="240" fx:id="01"/>
+    <Label text="忘记密码?" fx:id="03" AnchorPane.topAnchor="380" AnchorPane.leftAnchor="360"/>
+    <Label text="记住密码" fx:id="04" AnchorPane.topAnchor="380" AnchorPane.leftAnchor="150"/>
 
     <Label text="其他方式登陆" AnchorPane.topAnchor="490" AnchorPane.leftAnchor="50" fx:id="08"/>
 
