--- a/src/resources/fxml/main.fxml
+++ b/src/resources/fxml/main.fxml
@@ -9,18 +9,18 @@
 
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Accordion?>
-<?import javafx.scene.control.TitledPane?>  
+<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.StackPane?>
-<BorderPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="com.soft1841.sm.controller.MainAdminController" AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="10"
 
 >
-
+<BorderPane>
     <top>
         <AnchorPane  styleClass="dark-theme" prefHeight="80.0"  AnchorPane.topAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="10">
            <ImageView AnchorPane.leftAnchor="1820" AnchorPane.rightAnchor="10" AnchorPane.bottomAnchor="10" AnchorPane.topAnchor="10" fitWidth="70" fitHeight="70">
@@ -46,10 +46,10 @@
                            AnchorPane.rightAnchor="0.0"
                            AnchorPane.topAnchor="0.0">
                     <panes>
-                        <TitledPane styleClass="menut-btn" alignment="TOP_LEFT" text="商品管理">
+                        <TitledPane styleClass="menut-btn" alignment="TOP_LEFT" text="商品管理" >
                             <VBox styleClass="gray-theme" minHeight="100" spacing="10" >
-                                <Button  styleClass="menu-btn" text="商品类别" />
-                                <Button   styleClass="menu-btn" text="商品信息" />
+                                <Button  styleClass="menu-btn" text="商品类别" onAction="#listType" AnchorPane.leftAnchor="300" />
+                                <Button   styleClass="menu-btn" text="商品信息" onAction="#listGoods" AnchorPane.leftAnchor="300"/>
                             </VBox>
                         </TitledPane>
                         <TitledPane  styleClass="gray-theme" alignment="TOP_LEFT" text="员工管理">
@@ -60,7 +60,7 @@
                         </TitledPane>
                         <TitledPane alignment="TOP_LEFT" text="会员管理">
                             <VBox styleClass="gray-theme" minHeight="130" spacing="10" >
-                                <Button  styleClass="menu-btn" text="会员信息"/>
+                                <Button  styleClass="menu-btn" text="会员信息" onAction="#listVip" AnchorPane.leftAnchor="300"/>
                             </VBox>
                         </TitledPane>
                         <TitledPane alignment="TOP_LEFT" text="供应商管理">
@@ -87,9 +87,6 @@
             <ScrollPane fitToWidth="true" hbarPolicy="NEVER"
                         vbarPolicy="AS_NEEDED" styleClass="default-theme">
                 <StackPane fx:id="mainContainer" styleClass="default-theme" minWidth="1060">
-                    <ImageView >
-                        <Image url="/img/5.jpg"/>
-                    </ImageView>
                     <padding>
                         <Insets top="10" left="30" bottom="5" right="10"/>
                     </padding>
@@ -103,4 +100,5 @@
         </SplitPane>
     </center>
 </BorderPane>
+</AnchorPane>
 
